fix word-break in count

--- a/src/encoded/static/scss/encoded/modules/_facet.scss
+++ b/src/encoded/static/scss/encoded/modules/_facet.scss
@@ -190,6 +190,7 @@
 
     @at-root #{&}__count {
         flex: 0 1 auto;
+        word-break: normal;
     }
 
     // Bar graph representing the relative count.
